# nwpu_explorer_2019_8

./: .gitattributes  .gitignore  LICENSE  README.md
explorer_big/explorer_arm_back/: CMakeLists.txt  package.xml
explorer_big/explorer_arm_back/include/: explorer_arm_back.h
explorer_big/explorer_arm_back/src/: explorer_arm_back.cpp
explorer_big/explorer_big_arm_description/: CMakeLists.txt  package.xml  urdf.rviz
explorer_big/explorer_big_arm_description/config/: joint_names_explorer_big_arm_description.yaml
explorer_big/explorer_big_arm_description/launch/: display.launch  gazebo.launch
explorer_big/explorer_big_arm_description/meshes/: arm1_link.STL  arm2_link.STL  arm3_link.STL  base_link.STL  finger1_link.STL  finger2_link.STL  finger3_link.STL  front_back_base.STL  gripper_rotate_link.STL  left_down_fin_link.STL  left_down_wheel_link.STL  (+8 more)
explorer_big/explorer_co2_sensor/: CMakeLists.txt
explorer_big/explorer_driver/: CMakeLists.txt
explorer_big/explorer_joy_control/: CMakeLists.txt  readme.md
explorer_big/explorer_moveit_config/: .setup_assistant  package.xml
explorer_big/explorer_msgs/: CMakeLists.txt
explorer_big/explorer_odometry/: CMakeLists.txt  package.xml
explorer_big/explorer_robot_hardware/: readme.md  urdf命名规则&参考.md
explorer_pyaudio/launch/: explorer_pyaudio_local.launch
explorer_vision/yolotest/: CMakeLists.txt  package.xml
explorer_vision/yolotest/darknet/: 2007_test.txt  Makefile  bad.list  darknet  train.txt  uselib
explorer_vision/yolotest/darknet/include/: yolo_v2_class.hpp
explorer_vision/yolotest/launch/: yoloTest_detection.launch
explorer_vision/yolotest/src/: yoloTest (复件).cpp  yoloTest.cpp
explorer_vision/yolotest/train_weight_cfg/: yolov2.cfg  yolov2_final.weights
udev-rules/: 70-serial.rules  99-test_camera.rules  README.md
(+121 files in other folders)
